layout issues solved

--- a/styles.scss
+++ b/styles.scss
@@ -162,7 +162,8 @@ body {
             .content {
                 flex: 50%;
                 padding: 4rem;
-                gap: 4rem;
+                padding-top: 6rem;
+                gap: 1.2rem;
                 padding-right: 6rem;
                 text-align: left;
 
@@ -176,6 +177,7 @@ body {
                 }
 
                 .info {
+                    padding-top: 2.4rem;
                     width: 100%;
                     grid-template-columns: 1fr 1fr 1fr;
                 }
